Fixed alignment

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .masthead {
+  box-shadow: 1px 1px 2px #505050;
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
