--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,7 +24,7 @@
   float: left;
   display: block;
   margin-left: 10%;
-  margin-right: 5%;
+  margin-right: 3%;
   width: 7%;
   height: auto;
   background: url(/public/images/me.jpeg);
